force-app/main/default/objects/Student__c/fields/Active_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Active_Enrollments__c</fullName>
    <inlineHelpText>Enrollments to Active Programs</inlineHelpText>
    <label>Active Enrollments</label>
    <summaryFilterItems>
        <field>Enrollment__c.Enrollment_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed, Pending</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Enrollment__c.Program_Status__c</field>
        <operation>equals</operation>
        <value>Active, Upcoming</value>
    </summaryFilterItems>
    <summaryForeignKey>Enrollment__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>