force-app/main/default/objects/Student__c/fields/Attending_Day__c.field-meta.xml
<CustomField>
    <fullName>Attending_Day__c</fullName>
    <label>Attending Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>