force-app/main/default/objects/Student__c/fields/Ended_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Ended_Enrollments__c</fullName>
    <inlineHelpText>Total Ended Enrollments</inlineHelpText>
    <label>Ended Enrollments</label>
    <summaryFilterItems>
        <field>Enrollment__c.Program_Status__c</field>
        <operation>equals</operation>
        <value>Ended</value>
    </summaryFilterItems>
    <summaryForeignKey>Enrollment__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>