force-app/main/default/objects/Student__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1A</fullName>
            </value>
            <value>
                <fullName>1B</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>High-Schooler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>