force-app/main/default/objects/Student__c/recordTypes/Elementary_students.recordType-meta.xml
<RecordType>
    <fullName>Elementary_students</fullName>
    <active>true</active>
    <label>Elementary students</label>
</RecordType>