force-app/main/default/objects/Student__c/listViews/Active_Students.listView-meta.xml
<ListView>
    <fullName>Active_Students</fullName>
    <columns>Parent_Name__c</columns>
    <columns>NAME</columns>
    <columns>Grade__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grade__c</field>
        <operation>notEqual</operation>
        <value>High-Schooler</value>
    </filters>
    <label>Active Students</label>
</ListView>