force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Parent_Name__c</columns>
    <columns>NAME</columns>
    <columns>Grade__c</columns>
    <columns>Birthday__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>