force-app/main/default/objects/Student__c/listViews/High_Schoolers.listView-meta.xml
<ListView>
    <fullName>High_Schoolers</fullName>
    <columns>NAME</columns>
    <columns>Parent_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grade__c</field>
        <operation>equals</operation>
        <value>High-Schooler</value>
    </filters>
    <label>High Schoolers</label>
</ListView>