force-app/main/default/objects/Student__c/listViews/Inactive_students.listView-meta.xml
<ListView>
    <fullName>Inactive_students</fullName>
    <columns>NAME</columns>
    <columns>Parent_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Inactive students</label>
</ListView>